<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework2</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="Email">Email</string>
    <string name="Email2">Re-enter EMail</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Password2">Re-enter PW</string>
    <string name="Gender">Gender</string>
    <string name="Country">Country</string>
    <string name="Female">Female</string>
    <string name="Male">Male</string>
    <string name="Clear">Clear</string>
    <string name="Submit">Submit</string>

    <string-array name="Countries">
        <item>None</item>
        <item>Brazil</item>
        <item>Canada</item>
        <item>China</item>
        <item>France</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Spain</item>
        <item>United Kingdom</item>
        <item>United States</item>
    </string-array>

</resources>