<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow>

        <TextView
            android:id="@+id/FirstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FirstName" />

        <EditText
            android:id="@+id/FirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="words"
            android:ems="10"
            android:hint="@string/FirstName"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/LastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LastName" />

        <EditText
            android:id="@+id/LastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:capitalize="words"
            android:ems="10"
            android:hint="@string/LastName"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/PhoneNumberTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PhoneNumber" />

        <EditText
            android:id="@+id/PhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/PhoneNumber"
            android:inputType="phone" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/EmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/Email2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email2" />

        <EditText
            android:id="@+id/Email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Email2"
            android:inputType="textEmailAddress" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/UsernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Username" />

        <EditText
            android:id="@+id/Username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Username" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/PasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password" />

        <EditText
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/Password2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password2" />

        <EditText
            android:id="@+id/Password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password2"
            android:inputType="textPassword" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/GenderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gender" />

        <RadioGroup
            android:id="@+id/RadioSex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RadioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Male" />

            <RadioButton
                android:id="@+id/RadioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Female" />
        </RadioGroup>
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/CountryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Country" />

        <Spinner
            android:id="@+id/Country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/Clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Clear" />

        <Button
            android:id="@+id/Submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit" />
    </TableRow>

</TableLayout>